get all groups with full details
